Fixing issue with layout not having top margin on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@ header.masthead {
  ******************************************************************************/
 .main-wrapper {
     margin: 80px auto;
+    margin-top: 80px !important;
     max-width:960px;
 }
 
